# veSAL

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  get-deps.py  readme.md  run_test.sh  valgrind_check.sh
dsa-uio-config/: CMakeLists.txt  README.md  common.h  device.c  device.h  dsa.h  dsa_uio_config.c  idxd.h  log.c  prepare_dsa_env.cc  test.cc  user_device.c  user_device.h
dsa-uio-config/include/: dsa_uio_config.h  uio_wq_info.h
example/: CMakeLists.txt  c_cypher_demo.c  c_vesal_demo.c  ha_demo.cc  vesal_codec_epoll_example.cc  vesal_codec_example.cc  vesal_codec_shared_epoll_example.cc  vesal_data_flow_example.cc
include/: CMakeLists.txt
include/vesal/: codec.h  cypher.h  data_flow.h  log_setting.h  memory_pool.h  metrics.h  status.h  types.h  vesal.h  zstd_helper.h
include/vesal/c_api/: c_api_vesal.h
perf/: CMakeLists.txt  simple_histogram.h  util.h
perf/codec/: CMakeLists.txt  perf_simple.cc  run_compression_decompression_perf.sh  run_perf_simple.sh  run_sgl_perf.sh  run_zstd_perf.sh  shared_codec.cc  traffic_limiter.cc  traffic_limiter.h  zstd_perf.cc
perf/cypher/: CMakeLists.txt  cy_perf.cc
perf/data_flow/: CMakeLists.txt  data_flow_perf.cc  run_perf.sh
qat_dummy_driver/: CMakeLists.txt
qat_dummy_driver/include/quickassist/include/: cpa.h  cpa_types.h  qat_dummy_driver.h
qat_dummy_driver/include/quickassist/include/dc/: cpa_dc.h
qat_dummy_driver/include/quickassist/include/lac/: cpa_cy_common.h  cpa_cy_im.h  cpa_cy_sym.h
qat_dummy_driver/include/quickassist/lookaside/access_layer/include/: icp_sal_poll.h  icp_sal_user.h
qat_dummy_driver/src/: common.h  qat_dummy_driver.c
qat_dummy_driver/test/: CMakeLists.txt  qat_dummy_driver_test.cc
scripts/: cy_perf.py  dc_perf.py  parallel_testing.py  release_test.py  valgrind_block_list
src/: CMakeLists.txt
src/c_api/: CMakeLists.txt  c_api_cypher.cc  c_api_vesal.cc
src/codec/: CMakeLists.txt  codec.cc  codec_common.cc  codec_common.h  codec_internal.h  dc_format.cc  dc_format.h
src/codec/qat/: qat_codec.cc  qat_codec.h  qat_codec_dedicated_channel.cc  qat_codec_dedicated_channel.h  qat_codec_engine.cc  qat_codec_engine.h  qat_codec_shared_channel.cc  qat_codec_shared_channel.h  qat_error_handling.h  qat_ha.cc  qat_ha.h  qat_handle.cc  qat_handle.h  qat_poller.cc  qat_poller.h  qat_poller_manager.cc  qat_poller_manager.h  qat_poller_worker.cc  qat_poller_worker.h
src/codec/sw/: sw_codec.cc  sw_codec.h  sw_codec_channel.cc  sw_codec_channel.h
src/codec/zstd_helper/: zstd_helper.cc  zstd_helper_impl.cc  zstd_helper_impl.h
src/common/: CMakeLists.txt  checksum_impl.cc  checksum_impl.h  chunk_pool.cc  chunk_pool.h  dedicated_pool.h  defer.h  err_simulation.cc  err_simulation.h  log_setting.cc  memory_pool.cc  memory_pool_helper.cc  memory_pool_helper.h  metrics.cc  metrics_internal.h  mpsc_queue.h  object_pool.cc  object_pool.h  req_ring_queue.h  scheduler.cc  scheduler.h  status.cc  timer_manager.cc  timer_manager.h  timestamp.h  uds_listener.cc  uds_listener.h  vesal.cc  vesal_version.h.in
src/common/qat/: qat_buffer.cc  qat_buffer.h  qat_hardware_api_wrapper.cc  qat_hardware_api_wrapper.h  qat_session.cc  qat_session.h  qat_unit.cc  qat_unit.h  qat_unit_manager.cc  qat_unit_manager.h  qat_util.cc  qat_util.h
src/cypher/: CMakeLists.txt  cypher.cc  cypher.h  qat_cypher_channel.cc  qat_cypher_channel.h  sw_cypher_channel.cc  sw_cypher_channel.h
src/data_flow/: CMakeLists.txt  data_flow.cc  data_flow_channel_impl.cc  data_flow_channel_impl.h  data_flow_engines.h  data_flow_request.cc  data_flow_request.h  data_flow_resource_manager.h
src/data_flow/dsa/: data_flow_dsa_engine.cc  dsa_ctx_factory.cc  dsa_ctx_factory.h  dsa_dispatcher.cc  dsa_dispatcher.h  schedule_strategy.cc  schedule_strategy.h  work_queue_info.h
src/data_flow/sw/: data_flow_sw_engine.cc
test/: CMakeLists.txt  c_api_test.cc  chunk_pool_test.cc  codec_test.cc  data_flow_channel_test.cc  data_flow_engines_test.cc  dc_format_test.cc  defer_test.cc  dsa_ctx_factory_test.cc  dsa_dispatcher_test.cc  dsa_schedule_strategy_test.cc  err_simulation_test.cc  log_setting_test.cc  memory_pool_helper_test.cc  memory_pool_test.cc  mpsc_queue_test.cc  object_pool_test.cc  qat_buffer_test.cc  qat_codec_dedicated_channel_test.cc  qat_codec_engine_test.cc  qat_codec_shared_channel_test.cc  qat_codec_test.cc  qat_cypher_channel_test.cc  qat_error_handling_test.cc  qat_ha_test.cc  qat_poller_manager_test.cc  qat_poller_test.cc  qat_poller_worker_test.cc  qat_session_test.cc  qat_unit_manager_test.cc  req_ring_queue_test.cc  scheduler_test.cc  status_test.cc  sw_test.cc  timestamp_test.cc  uds_listener_test.cc  ut_util.h  vesal_test.cc  zstd_test.cc
third/: CMakeLists.txt
tools/: CMakeLists.txt  err_simulator.cc  monitor.py  pci_bind.sh  run-clang-tidy.py
